tests/rosetta/out/Smalltalk/adfgvx-cipher.out
/tmp/adfgvx-cipher.st:8: parse error, expected ']'
